# IsaacSim-Agriculture-Robot

./: .gitignore  README.md  setup.py
docs/: TESTING.md
install/: local_setup.sh  setup.sh
install/agri_robot_description/share/agri_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/agri_robot_description/share/agri_robot_description/cmake/: agri_robot_descriptionConfig-version.cmake  agri_robot_descriptionConfig.cmake
install/agri_robot_description/share/agri_robot_description/config/: robot.yaml
install/agri_robot_description/share/agri_robot_description/environment/: ament_prefix_path.dsv  path.dsv
install/agri_robot_description/share/agri_robot_description/launch/: display.launch.py
install/agri_robot_description/share/agri_robot_description/urdf/: agri_robot.urdf  agri_robot.xacro  inertial_macros.xacro  robot.urdf.xacro
install/agri_robot_description/share/agri_robot_description/urdf/agri_robot/: agri_robot.usd
log/: latest_build
scripts/: run_isaacsim.sh  smoke_test_topics.sh
src/IsaacSim/: AgriRobot.usd  AgriRobot.usdz
src/agri_robot_description/: CMakeLists.txt  package.xml
src/agri_robot_description/agri_tracker/: __init__.py  data_collector.py  evaluator.py  fake_odom_publisher.py  setup.py  tracker.py  tuner.py  visualizer.py
src/agri_robot_description/config/: robot.yaml
src/agri_robot_description/install/: local_setup.sh  setup.sh
src/agri_robot_description/isaac/: agri_robot_scene.usd
src/agri_robot_description/launch/: display.launch.py  full_stack.launch.py  test_tracker.launch.py
src/agri_robot_description/log/: latest_build
src/agri_robot_description/test/: test_tracker_nodes.py
src/agri_robot_description/urdf/: agri_robot.urdf  agri_robot.xacro  agri_robot_base.urdf.xacro  inertial_macros.xacro  robot.urdf.xacro
src/agri_robot_description/urdf/agri_robot/: agri_robot.usd
src/agri_robot_description/urdf/agri_robot/configuration/: agri_robot_base.usd  agri_robot_physics.usd
(+5 files in other folders)
